tests/integration/error/string_char_at_bad_index_type.alo
// expect-error: Type mismatch in argument 2 of function 'string_char_at': expected 'int', got 'string'

fun main() -> void {
    string_char_at("abc", "0");
}
